# confederation

./: .gitlab-ci.yml  .releaserc.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.libs.json  turbo.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
_fixtures/interop/: envelopes.json  keypair.json
_libs/cli/: README.md  package.json  tsconfig.json
_libs/cli-rs/: Cargo.toml
_libs/cli-rs/.cargo/: config.toml
_libs/cli-rs/src/: discover_config.rs  env_text.rs  expand_env.rs  lib.rs  main.rs  resolve_key.rs  schema.rs
_libs/cli-rs/src/crypto/: decrypt.rs  encrypt.rs  format.rs  keygen.rs  mod.rs
_libs/cli-rs/tests/: interop.rs
_libs/cli/src/: app.test.ts  app.ts  bin.ts  context.ts  decrypt.ts  discoverConfig.ts  encrypt.ts  encryptAll.ts  gen.test.ts  gen.ts  keygen.test.ts  keygen.ts  renderValidate.test.ts  renderValidate.ts  rotate.ts  run.test.ts  teamSecrets.test.ts  validate.test.ts  validate.ts
_libs/core/: README.md  package.json  tsconfig.json
_libs/core/src/: classify.test.ts  classify.ts  createConfig.test.ts  createConfig.ts  defineConfig.test.ts  defineConfig.ts  deriveName.test.ts  deriveName.ts  enumerateLeafPaths.test.ts  enumerateLeafPaths.ts  envText.ts  explain.test.ts  explain.ts  findSecretPaths.ts  freeze.ts  index.ts  inspectSchema.test.ts  inspectSchema.ts  loadConfig.ts  merge.test.ts  merge.ts  (+9 more)
_libs/vscode/: .vscodeignore  LICENSE  README.md  esbuild.config.mjs  package.json  tsconfig.json  tsconfig.webview.json
_tools/tsconfig/: package.json  tsconfig.base.json
(+78 files in other folders)
