[package]
name = "puristic"
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Puristic env CLI — validate config, manage post-quantum-encrypted secrets, and run commands with a populated environment"
repository = "https://github.com/radarsu/puristic-env"

[[bin]]
name = "puristic"
path = "src/main.rs"

[lib]
name = "puristic"
path = "src/lib.rs"

[dependencies]
ml-kem = "0.2"
aes-gcm = "0.10"
base64 = "0.22"
indexmap = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
